[gd_scene load_steps=6 format=2]

[ext_resource path="res://HUD.gd" type="Script" id=1]
[ext_resource path="res://fonts/Xolonium-Regular.ttf" type="FontFile" id=2]

[sub_resource type="FontFile" id=1]
size = 24
font_data = ExtResource( 2 )

[sub_resource type="FontFile" id=2]
size = 24
font_data = ExtResource( 2 )

[sub_resource type="FontFile" id=3]
size = 26
font_data = ExtResource( 2 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="score_label" type="Label" parent="."]
modulate = Color( 0.772549, 0.831373, 0, 1 )
anchor_left = 1.0
anchor_right = 1.0
offset_left = -64.0
offset_right = -24.0
offset_bottom = 30.0
theme_override_fonts/font = SubResource( 1 )
text = "0"

[node name="kscore_label" type="Label" parent="."]
modulate = Color( 1, 0, 0, 1 )
anchor_left = 1.0
anchor_right = 1.0
offset_left = -64.0
offset_top = 40.0
offset_right = -24.0
offset_bottom = 70.0
theme_override_fonts/font = SubResource( 1 )
text = "0"

[node name="restart_button" type="Button" parent="."]
modulate = Color( 0.0431373, 0, 0.701961, 0.729412 )
show_behind_parent = true
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -96.0
offset_top = -324.0
offset_right = 96.0
offset_bottom = -262.0
theme_override_fonts/font = SubResource( 2 )
text = "Restart"

[node name="spawn_rate" type="ProgressBar" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -36.0

[node name="paused_label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -96.0
offset_top = -26.0
offset_right = 96.0
offset_bottom = 30.0
theme_override_fonts/font = SubResource( 3 )
text = "paused"
align = 1
valign = 1

[node name="flash_label" type="Label" parent="."]
offset_left = 770.0
offset_top = 31.0
offset_right = 827.0
offset_bottom = 64.0
align = 1
valign = 1

[node name="timer" type="Timer" parent="flash_label"]
one_shot = true
